--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+# eclipse
+**/.project
+**/.settings/
+**/.classpath
+   	
+# maven
+**/target/
+
+# intellij			
+.idea/
+.idea_modules/
+auto-import.
+**/*.iml
+**/*.iws
+**/*.ipr
+
 # Compiled class file
 *.class
 
